--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Copyright 2020 Pants project contributors.
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
-ansicolors>=1.0.2
-setuptools<54.0,>=50.3.0
-translate>=3.2.1
-protobuf>=3.11.3
+ansicolors==1.1.8
+setuptools>=57.0.0,<58
+types-setuptools>=57.0.0,<58
+translate>=3.6.1,<3.7
+protobuf>=3.17.3,<3.18
+types-protobuf>=3.17.4,<3.18
