--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -2,7 +2,9 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 # This target sets the metadata for all the Python non-test files in this directory.
-python_library(name="lib")
+python_library(
+    name="lib",
+)
 
 # This target allows us to bundle our app into a PEX binary file via
 #  `./pants package`. We can also run it with `./pants run`. See
