Upgrade to Pants 2.10

--- a/helloworld/greet/BUILD
+++ b/helloworld/greet/BUILD
@@ -3,8 +3,8 @@
 
 # This target sets the metadata for all the Python non-test files in this directory.
 #
-# * Pants cannot infer dependencies on `resource` / `resources` targets, so we explicitly add the
-#   dep.
+# * Pants cannot yet infer dependencies on `resource` / `resources` targets, so we explicitly add
+#   the dep.
 python_sources(
     name="lib",
     dependencies=[":translations"],
