--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -49,7 +49,7 @@ jobs:
       run: ./pants tailor --check update-build-files --check
     - name: Lint and typecheck
       run: | 
-        ./pants lint typecheck ::
+        ./pants lint check ::
     - name: Test
       run: |
         ./pants test ::
