--- a/pants.toml
+++ b/pants.toml
@@ -26,9 +26,12 @@ repo_id = "3B1D361B-E9F1-49A8-B761-03DCC41FD58E"
 root_patterns = ["/"]
 
 [python]
-# The default interpreter compatibility for code in this repo. Individual targets can override
+# The default interpreter constraints for code in this repo. Individual targets can override
 #  this with the `interpreter_constraints` field. See
 #  https://www.pantsbuild.org/docs/python-interpreter-compatibility.
+#
+# It's usually a good idea to pin this to a particular version, e.g. `==3.9.*`. We only use a range
+# so that this example works on many different machines.
 #
 # If you use Apple Silicon, set to a value like `>=3.9`.
 interpreter_constraints = [">=3.7"]
