Run on branches too

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -5,11 +5,7 @@
 
 name: Pants
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   org-check:
