--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "2.10.0"
+pants_version = "2.11.0rc5"
 backend_packages.add = [
   "pants.backend.python",
   "pants.backend.python.lint.docformatter",
@@ -11,11 +11,6 @@ backend_packages.add = [
   "pants.backend.python.lint.isort",
   "pants.backend.python.typecheck.mypy",
 ]
-
-# This will become the default in 2.11, and is only explicitly set to not break
-# backwards-compatibility for existing users. If you are setting up Pants for
-# the first time, set this to false.
-use_deprecated_python_macros = false
 
 [anonymous-telemetry]
 enabled = true
