--- a/pants.toml
+++ b/pants.toml
@@ -38,8 +38,8 @@ interpreter_constraints = [">=3.7"]
 enable_resolves = true
 resolves = { python-default = "lockfile.txt"}
 
-# Enable using the PEX lockfile format, which provides improved performance for large
-# monorepos, and better support for alternative repositories.
+# Enable using the PEX lockfile format, which provides support for custom indexes, and
+# improves performance for large repositories.
 lockfile_generator = "pex"
 
 [python-bootstrap]
