Adds sample (inactive) Toolchain config to `pants(.ci).toml`

--- a/pants.ci.toml
+++ b/pants.ci.toml
@@ -7,5 +7,14 @@
 dynamic_ui = false
 colors = true
 
+# Set to `true` if you have a Pants remote cache provider available for CI builds
+remote_cache_read = false
+remote_cache_write = false
+
 [pytest]
 args = ["-vv", "--no-header"]
+
+# Toolchain plugin auth configuration
+[auth]
+from_env_var = "TOOLCHAIN_AUTH_TOKEN"
+org = "pantsbuild"
