--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -32,9 +32,9 @@ jobs:
         path: |
           ~/.cache/pants/setup # The initial bootstrapping of Pants
           ~/.cache/pants/named_caches  # Caches used by underlying tools like Pip and PEX.
-          # If you're not using a fine-grained remote caching service, such as the one provided by
-          # Toolchain(https://toolchain.com/), the lead sponsor of Pants, then you may also want to
-          # preserve the local Pants cache:
+          # If you're not using a fine-grained remote caching service (see
+          # https://www.pantsbuild.org/docs/remote-caching), then you may also want to preserve
+          # the local Pants cache:
           # ~/.cache/pants/lmdb_store
         # Note that this is a very non-specific key, so the cache will include the
         # setup for every prior version of Pants you've used, and a lot of old state of
