--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -26,15 +26,18 @@ jobs:
         python-version: [3.7]
     steps:
     - uses: actions/checkout@v2
+    - name: Get Pants version
+      id: pants_version
+      run: |
+        # Capture the "pants_version = " line from config.
+        PANTS_VERSION=$(grep -E '^pants_version\s*=' pants.toml)
+        echo "::set-output name=pants_version::$PANTS_VERSION"
     - uses: actions/cache@v2
       id: cache_pants_setup
       with:
         path: |
           ~/.cache/pants/setup
-        key: pants-setup-${{ runner.os }}-${{ hashFiles('pants.toml') }}
-        restore-keys: |
-          pants-setup-${{ runner.os }}-${{ hashFiles('pants.toml') }}
-          pants-setup-${{ runner.os }}-
+        key: pants-setup-${{ steps.pants_version.outputs.pants_version }}
     - uses: actions/cache@v2
       id: cached_named_caches
       with:
@@ -45,6 +48,10 @@ jobs:
         key: named-caches-${{ runner.os }}-${{ hashFiles('pants.toml') }}-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           pants-setup-${{ runner.os }}-${{ hashFiles('pants.toml') }}-${{ hashFiles('requirements.txt') }}
+          # Note that falling back to a restore key may give a useful partial result that will save time
+          # over completely clean state, but will cause the cache entry to grow without bound over time.
+          # See https://pants.readme.io/docs/using-pants-in-ci for tips on how to periodically clean it up.
+          # Alternatively you may want to avoid using restore keys.
           pants-setup-${{ runner.os }}-${{ hashFiles('pants.toml') }}-
           pants-setup-${{ runner.os }}-
     # If you're not using a fine-grained remote caching service (see https://www.pantsbuild.org/docs/remote-caching),
@@ -57,6 +64,7 @@ jobs:
         path: |
           ~/.cache/pants/lmdb_store
         key: pants-setup-${{ runner.os }}-${{ hashFiles('**/*') }}
+        # Same caveat as above regarding the issues with restore keys.
         restore-keys: pants-setup-${{ runner.os }}-
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
