use updated action

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -24,11 +24,13 @@ jobs:
         python-version: [3.7]
     steps:
     - uses: actions/checkout@v2
-    - uses: st2sandbox/init-pants-action@main
+    - uses: cognifloyd/actions/init-pants@main
       with:
         # cache0 makes it easy to bust the cache if needed
         # just increase the integer to start with a fresh cache
         gha-cache-key: cache0-py${{ matrix.python-version }}
+        named-caches-hash: ${{ filesHash('lockfile.txt') }}
+
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
