--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -24,7 +24,7 @@ jobs:
         python-version: [3.7]
     steps:
     - uses: actions/checkout@v2
-    - uses: cognifloyd/actions/init-pants@main
+    - uses: cognifloyd/actions/init-pants@init-pants
       with:
         # cache0 makes it easy to bust the cache if needed
         # just increase the integer to start with a fresh cache
