--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -25,11 +25,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: cognifloyd/actions/init-pants@init-pants
+      # This action bootstraps pants and manages 2-3 GHA caches.
+      # See: github.com/pantsbuild/actions/tree/init-pants/
       with:
         # cache0 makes it easy to bust the cache if needed
         # just increase the integer to start with a fresh cache
         gha-cache-key: cache0-py${{ matrix.python-version }}
+        # The Python backend uses named_caches for Pip/PEX state,
+        # so it is appropriate to invalidate on lockfile changes.
         named-caches-hash: ${{ hashFiles('lockfile.txt') }}
+        # If you're not using a fine-grained remote caching service (see https://www.pantsbuild.org/docs/remote-caching),
+        # then you may also want to preserve the local Pants cache (lmdb_store). However this must invalidate for
+        # changes to any file that can affect the build, so may not be practical in larger repos.
+        # A remote cache service integrates with Pants's fine-grained invalidation and avoids these problems.
+        cache-lmdb-store: 'true'  # defaults to 'false'
+        # Note that named_caches and lmdb_store falls back to partial restore keys which
+        # may give a useful partial result that will save time over completely clean state,
+        # but will cause the cache entry to grow without bound over time.
+        # See https://pants.readme.io/docs/using-pants-in-ci for tips on how to periodically clean it up.
+        # Alternatively you change gha-cache-key to ignore old caches.
 
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
