--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -24,9 +24,10 @@ jobs:
         python-version: [3.7]
     steps:
     - uses: actions/checkout@v2
-    - uses: cognifloyd/actions/init-pants@init-pants
+    - uses: pantsbuild/actions/init-pants@c0ce05ee4ba288bb2a729a2b77294e9cb6ab66f7
       # This action bootstraps pants and manages 2-3 GHA caches.
       # See: github.com/pantsbuild/actions/tree/init-pants/
+      # We use an action SHA because there are no tags yet.
       with:
         # cache0 makes it easy to bust the cache if needed
         # just increase the integer to start with a fresh cache
