--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "2.12.0"
+pants_version = "2.14.0rc3"
 backend_packages.add = [
   "pants.backend.python",
   "pants.backend.python.lint.docformatter",
@@ -16,7 +16,7 @@ backend_packages.add = [
 # with minimal configuration. For more details, visit https://toolchain.com
 
 plugins.add = [
-  "toolchain.pants.plugin==0.20.0",
+  "toolchain.pants.plugin==0.24.0",
 ]
 
 remote_cache_read = false
