--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -51,7 +51,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Check BUILD files
-      run: ./pants tailor --check update-build-files --check
+      run: |
+        ./pants tailor --check update-build-files --check ::
     - name: Lint and typecheck
       run: | 
         ./pants lint check ::
