--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 ansicolors==1.1.8
+pytest==7.1.3
 setuptools>=56.2.0,<57
 types-setuptools>=56.2.0,<58
