--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -28,6 +28,7 @@ jobs:
       # This action bootstraps pants and manages 2-3 GHA caches.
       # See: github.com/pantsbuild/actions/tree/init-pants/
       with:
+        pants-python-version: ${{ matrix.python-version }}
         # cache0 makes it easy to bust the cache if needed
         # just increase the integer to start with a fresh cache
         gha-cache-key: cache0-py${{ matrix.python-version }}
