Update CI config.

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -18,15 +18,15 @@ jobs:
   build:
     name: Perform CI Checks
     needs: org-check
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version: [3.9]
     steps:
     - uses: actions/checkout@v3
-    - uses: pantsbuild/actions/init-pants@v1
+    - uses: pantsbuild/actions/init-pants@v2
       # This action bootstraps pants and manages 2-3 GHA caches.
-      # See: github.com/pantsbuild/actions/tree/init-pants/
+      # See: github.com/pantsbuild/actions/tree/main/init-pants/
       with:
         pants-python-version: ${{ matrix.python-version }}
         # cache0 makes it easy to bust the cache if needed
@@ -45,11 +45,6 @@ jobs:
         # but will cause the cache entry to grow without bound over time.
         # See https://pants.readme.io/docs/using-pants-in-ci for tips on how to periodically clean it up.
         # Alternatively you change gha-cache-key to ignore old caches.
-
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
     - name: Check BUILD files
       run: ./pants tailor --check update-build-files --check
     - name: Lint and typecheck
