--- a/pants.toml
+++ b/pants.toml
@@ -12,18 +12,22 @@ backend_packages.add = [
   "pants.backend.python.typecheck.mypy",
 ]
 
-# Pants' sponsor, Toolchain, offers remote caching, which can improve your CI performance
-# with minimal configuration. For more details, visit https://toolchain.com
+# Pants' sponsor, Toolchain, offers remote caching, which can improve your CI performance with minimal configuration. 
+# Visit https://toolchain.com to enable and try it on your repository
+# docs: https://docs.toolchain.com/docs
 
 plugins.add = [
-  "toolchain.pants.plugin==0.20.0",
+  "toolchain.pants.plugin==0.25.0",
 ]
-
 remote_cache_read = false
 remote_cache_write = false
-remote_store_address = "grpcs://cache.toolchain.com:443"
-remote_auth_plugin = "toolchain.pants.auth.plugin:toolchain_auth_plugin"
 
+[toolchain-setup]
+repo = "pants"
+org = "example-python"
+
+[buildsense]
+enable = false
 # End Toolchain-specific configuration
 
 
@@ -58,14 +62,3 @@ resolves = { python-default = "python-default.lock"}
 #  problematic system Pythons. See
 #  https://www.pantsbuild.org/docs/python-interpreter-compatibility#changing-the-interpreter-search-path.
 search_path = ["<PATH>", "<PYENV>"]
-
-
-# Configuration for Toolchain instrumentation and remote caching
-# Visit https://toolchain.com to enable and try it on your repository
-
-[toolchain-setup]
-repo = "pants"
-org = "example-python"
-
-[buildsense]
-enable = false
