--- a/pants.toml
+++ b/pants.toml
@@ -4,6 +4,7 @@
 [GLOBAL]
 pants_version = "2.14.0"
 backend_packages.add = [
+  "pants.backend.build_files.fmt.black",  
   "pants.backend.python",
   "pants.backend.python.lint.docformatter",
   "pants.backend.python.lint.black",
