Update pytest & running tailor in CI
see: https://github.com/pantsbuild/example-python/pull/109#issuecomment-1282640689

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -46,7 +46,8 @@ jobs:
         # See https://pants.readme.io/docs/using-pants-in-ci for tips on how to periodically clean it up.
         # Alternatively you change gha-cache-key to ignore old caches.
     - name: Check BUILD files
-      run: ./pants tailor --check update-build-files --check
+      run:  |
+        ./pants tailor --check update-build-files --check ::
     - name: Lint and typecheck
       run: | 
         ./pants lint check ::
