--- a/pants.toml
+++ b/pants.toml
@@ -3,6 +3,7 @@
 
 [GLOBAL]
 pants_version = "2.14.0"
+pythonpath = ["%(buildroot)s/pants-plugins"]
 backend_packages.add = [
   "pants.backend.build_files.fmt.black",  
   "pants.backend.python",
@@ -11,6 +12,7 @@ backend_packages.add = [
   "pants.backend.python.lint.flake8",
   "pants.backend.python.lint.isort",
   "pants.backend.python.typecheck.mypy",
+  "internal_plugins.unowned_dependencies",
 ]
 
 # Pants' sponsor, Toolchain, offers remote caching, which can improve your CI performance with minimal configuration. 
@@ -37,7 +39,7 @@ repo_id = "3B1D361B-E9F1-49A8-B761-03DCC41FD58E"
 
 [source]
 # The Python source root is the repo root. See https://www.pantsbuild.org/docs/source-roots.
-root_patterns = ["/"]
+root_patterns = ["/", "/pants-plugins"]
 
 [python]
 # The default interpreter constraints for code in this repo. Individual targets can override
@@ -62,3 +64,6 @@ resolves = { python-default = "python-default.lock"}
 #  problematic system Pythons. See
 #  https://www.pantsbuild.org/docs/python-interpreter-compatibility#changing-the-interpreter-search-path.
 search_path = ["<PATH>", "<PYENV>"]
+
+[python-infer]
+unowned_dependency_behavior = "error"
